# radioactive-ralph

./: .gitignore  .golangci.yaml  .goreleaser.chocolatey.yaml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FyneApp.toml  LICENSE  Makefile  README.md  SECURITY.md  STANDARDS.md  go.mod  go.sum  pyproject.toml  sonar-project.properties  tox.ini
.agent-state/: .last-stop-fingerprint  decisions.ndjson  directive.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: task-batch-flush.sh
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  raw-1a-code-quality.md  raw-1b-architecture.md  raw-2a-security.md  raw-2b-performance.md  state.json
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: automerge.yml  cd.yml  ci.yml  codeql.yml  provider-live.yml  release-assets.yml  release-please.yml  release.yml  service-managers.yml
.radioactive-ralph/plans/: index.md  m3-complete.json  m3-completion-advisor.md  zero-deferment-release-closeout-advisor.md  zero-deferment-release-closeout.json
assets/: ASSETS.md
cmd/radioactive_ralph/: advisor.go  attach.go  binding_resolver.go  binding_resolver_test.go  client.go  desktop_launch.go  desktop_launch_stub.go  desktop_launch_stub_test.go  doctor.go  doctor_cmd.go  events_cmd.go  events_cmd_test.go  gui_cmd.go  gui_cmd_stub.go  init.go  init_cmd.go  init_conflict_test.go  ipc_client.go  ipc_client_test.go  main.go  main_test.go  mcp.go  mcp_test.go  onboard_cmd.go  paths.go  plan.go  plan_cmd.go  plan_cmd_test.go  plans_gate.go  run.go  serve.go  service.go  service_cmd.go  service_cmd_test.go  service_test.go  service_windows.go  service_windows_host.go  service_windows_host_stub.go  service_windows_stub.go  status.go  (+7 more)
cmd/ralph/: advisor.go  attach.go  doctor.go  init.go  ipc_client.go  main.go  plans_gate.go  run.go  service.go  status.go  stop.go  supervisor.go
docs/: ARCHITECTURE.md  DEMO.md  DESIGN.md  LAUNCH.md  STATE.md  TESTING.md  conf.py  index.md  index.rst
docs/_static/: custom.css
docs/api/: index.md
docs/content/: README.md
docs/design/: completion-and-a2a.md  config-layers.md  declarative-provider-bindings.md  fixit-plan-pipeline.md  index.md  provider-contract.md
docs/getting-started/: index.md
docs/guides/: cassette-vcr.md  demo.md  design.md  fixit-delegation.md  gui.md  index.md  launch.md  plan-format.md  safety-floors.md  transports.md  tui.md
docs/launch/: index.md  release-checklist.md
docs/plans/: 2026-04-14-radioactive-ralph-rewrite.prq.md  2026-04-16-v1-remaining-work.prd.md  m2-audit.md
docs/reference/: architecture.md  index.md  state.md  testing.md
docs/runbooks/: approvals-handoffs.md  index.md  install-first-run.md  platforms.md  provider-auth.md  service.md  troubleshooting.md
docs/superpowers/: PILLARS.md
docs/variants/: blue-ralph.md  fixit-ralph.md  (+10 more)
packaging/: README.md
reference/: README.md  pyproject.toml
scripts/: demo.tape  generate-api-docs.sh  record-demo.sh  validate-docs.sh  validate_docs.py
site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
skill/: SKILL.md
skill-ralph/: SKILL.md
skills/: README.md
tests/: conftest.py  test_agent_runner.py  test_cli.py  test_config.py  test_dashboard.py  test_doctor.py  test_forge.py  test_forge_gitea.py  test_forge_github.py  test_forge_gitlab.py  test_git_client.py  test_github_client.py  test_logging_setup.py  test_models.py  test_orchestrator.py  test_pr_manager.py  test_ralph_says.py  test_reviewer.py  test_state.py  test_work_discovery.py
(+500 files in other folders)
